# aoc

./: pyproject.toml  setup.py  template.py  utils.py
2019/: Cargo.toml
2019/src/: input.rs  intcode.rs  main.rs  solutions.rs
2019/src/solutions/: day01.rs  day02.rs
2021/18/: 2021_18.py
2024/01/: 2024_01.py  2024_01_chatgpt.py
2024/02/: 2024_02.py
2024/03/: 2024_03.py
2024/04/: 2024_04.py
2024/05/: 2024_05.py
2024/06/: 2024_06.py
2024/07/: 2024_07.py
2024/08/: 2024_08.py
2024/09/: 2024_09.py
2024/10/: 2024_10.py
2024/11/: 2024_11.py
2024/12/: 2024_12.py
2024/13/: 2024_13.py
2024/14/: 2024_14.py
2024/15/: 2024_15.py
2024/16/: 2024_16.py
2024/17/: 2024_17.py
2024/18/: 2024_18.py
2024/19/: 2024_19.py
2024/20/: 2024_20.py
2024/21/: 2024_21.py
2024/22/: 2024_22.py
2024/23/: 2024_23.py
2024/24/: 2024_24.py
2024/25/: 2024_25.py
2025/: package.json  pnpm-lock.yaml
2025/src/app/: globals.css  layout.tsx  page.tsx
2025/src/app/[year]/: page.tsx
2025/src/components/: App.tsx  EventDay.tsx  SomeOtherComponent.tsx
2025/src/components/ui/: button.tsx  tooltip.tsx
2025/src/hooks/: EventSelectionProvider.tsx
